Updated visuals, fixed bug, added messages Updated file search so that it would not shrink between searches. Updated messages total to have a box shadow to make it more visible. Updated each display tags visuals to be more consistent and display properly. Fixed download button on file page so that it now downloads a file after retrieving file. Added messages for downloading, deleting and updating files in the file page.

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -136,7 +136,10 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    margin-left: -60px;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 100px;
+    margin-left: -120px;
     margin-top: 15px;
 }
 
@@ -206,17 +209,50 @@
 
 .pre-display {
     height: auto;
-    max-height: 300px;
+    min-height: 300px;
+    max-height: 1000px;
+    width: 500px;
     overflow: auto;
     word-break: normal;
     word-wrap: normal;
     white-space: pre;
-    border: 5px solid black;
-    border-radius: 15px;
+    border: 5px solid #E6E6FA;
+    background-color: white;
+    color: black;
+}
+
+.no-file-display {
+    background-color: rgb(163, 153, 153);
+    color: black;
+    border: 5px solid #E6E6FA;
+    height: 300px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
 }
 
 .img-display {
     width: 500px;
+    border: 5px solid #E6E6FA;
+}
+
+.video-display {
+    width: 500px;
+    border: 5px solid #E6E6FA;
+}
+
+.audio-display {
+    width: 500px;
+    border: 5px solid #E6E6FA;
+}
+
+.iframe-display {
+    height: auto;
+    height: 1000px;
+    width: 500px;
+    border: 5px solid #E6E6FA;
 }
 
 .users-display {
@@ -421,10 +457,12 @@
 
 .file-search-container {
     display: flex;
+    width: 350px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #E6E6FA;
+    border: 1px solid #66023C;
 }
 
 .file-search-inputs {
@@ -439,9 +477,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 350px;
+    width: 100%;
     height: 50px;
-    border: 1px solid black;
+    border: 1px solid #66023C;
     cursor: pointer;
 }
 
@@ -545,6 +583,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .current-message {
